CHANGES IN FLTK 1.1.8

	- Fixed Fl_Window::copy_label() losing copy (STR #1332)
	- Documentation fixes (STR #1336, STR #1329, STR #1339,
	  STR #1340)
	- Added support for floating point Fl_Spinner in the
	  API, documentation, and Fluid (STR #1331)
	- Repeat button now cancels timeout if it should get 
	  deactivated during a callback (STR #1330)
	- Added support for assigning Fl_Menu_Items to array 
	  variables in Fluid (STR #1280)
	- Added --with-archflags configure option to allow
	  passing of specific architecture-selection options to
	  the compiler and linker.
	- Fixed WIN32 window stacking bug (STR #1296)
	- Fixed wrong code generated by FLUID for Scrollbars (STR
	  #1287)
	- Loading a file would not update the Widget Properties
	  dialog in FLUID (STR #1326)
	- Fixed key compose sequences for shifted keys (STR
	  #1194)
	- Added text selection and copy to Fl_Help_View.
	- Fixed position of popup menu titles (STR #1322)
	- Showing any window will disable the current tooltip
	  so it won't pop over menus (STR #1321)
	- Updated documentation to reflect limitation of 
	  Fl::delete_widget() (STR #1306)
	- Fixed line wrapping in Fl_Text_Display (STR #1227)
	- New function Fl::event_original_key() returns key  code
	  before NumLock handling.
	- Many OS X Quartz fixes (STR #1310, etc.)
	- Fixed shortcut and default focus for message dialogs
	  (STR #1298)
	- Fixed focus issues (STR #1286, STR #1289, STR #1296)
	- Fixed window resizing in OS X (STR #1297)
	- In FLUID, declarations starting with the keyword
	  'typedef', 'class', or 'struct' are now treated
	  correctly if inside a class (STR #1283)
	- Tabs now show the correct tooltip (STR #1282)
	- Included fltk.spec in configure.in (STR #1274)
	- Fixed insufficiently invalidated cache 
	  in Fl_Browser (STR #1265)
	- Attempt to fix multi monitor issues (STR #1153)
	- Fixed warnings when compiling w/Cygwin (STR #1152)
	- Fixed missing reset of flag in FLUID (STR #1187)
	- Fixed maximizing in OS X (STR #1221)